# oligos_prediction

./: .gitignore  MANIFEST.in  README.md  generate_features.py  main.py  predictions.py  pyproject.toml  requirements.txt  utils.py
artifacts/saved_models/: scaler.pkl  target_transformer.pkl
oligos_prediction/: main.py  predictions.py
src/artifacts/: utils.py
src/artifacts/saved_models/: XGBoost.pkl  model_info.json
src/oligos_prediction/: __init__.py  generate_features.py  predictions.py  utils.py
src/oligos_prediction/artifacts/saved_models/: residuals.csv
