[project]
name = "oligos_prediction"
version = "0.1.0"
dependencies = [
    "numpy",
    "bio",
    "notebook",
    "ViennaRNA",
    "pandas",
    "scikit-learn",
    "xgboost==2.1.2",
    "dill",
]


[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"